--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 .pointer {
   cursor: pointer;
 }
+
+.ant-modal-footer {
+  display: none;
+}
+
+.ant-select-selector {
+  height: 50px !important;
+}
+
+.ant-select-selection-placeholder,
+.ant-select-selection-item {
+  margin-top: 5px;
+}
+
+.btn-square {
+  border-radius: 0;
+}
